// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Processing state handling: displays error message, when there is an error in loading product 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getAction": [Function],
      "getActions": [Function],
      "getState": [Function],
      "isActionDispatched": [Function],
      "isActionTypeDispatched": [Function],
      "subscribe": [Function],
    }
  }
>
  <Product
    dispatch={[Function]}
    product={
      Object {
        "error": true,
        "loading": false,
        "product": Array [],
      }
    }
  >
    <Layout>
      <div>
        <CustomHead>
          <SideEffect(Head)>
            <Head />
          </SideEffect(Head)>
        </CustomHead>
        <div
          className="o-header"
        >
          <Logo
            className="o-header__logo"
          >
            <div
              className="o-header__logo"
            >
              <Link
                as="/"
                href="/home/index"
              >
                <a
                  href="/"
                  onClick={[Function]}
                >
                  <Image
                    height={79}
                    src="/static/logo.svg"
                    width={72}
                  >
                    <div
                      className={undefined}
                      style={
                        Object {
                          "height": 79,
                          "width": 72,
                        }
                      }
                    >
                      <img
                        className="c-image"
                        height={79}
                        src="/static/logo.svg"
                        width={72}
                      />
                    </div>
                  </Image>
                </a>
              </Link>
            </div>
          </Logo>
          <span
            className="o-header__search"
          >
            <SearchBar
              onChange={undefined}
              queryObject={undefined}
            >
              <form
                action="/search"
                method="get"
                onSubmit={[Function]}
                role="search"
              >
                <div
                  className="c-searchbar"
                >
                  <input
                    aria-label="search text"
                    className="c-searchbar--input"
                    name="query"
                    onChange={[Function]}
                    placeholder="Enter Keyword Or Product Code"
                    type="search"
                    value=""
                  />
                  <Button
                    label="Search"
                    size="lrg"
                    status="primary"
                  >
                    <button
                      className="o-button o-button--primary o-button--lrg"
                      disabled={false}
                      role="button"
                      tabIndex="0"
                    >
                      Search
                    </button>
                  </Button>
                </div>
              </form>
            </SearchBar>
          </span>
          <span
            className="o-header__minibag"
          >
            <Connect(MiniBag)>
              <MiniBag
                cart={Object {}}
                dispatch={[Function]}
              >
                <div>
                  <Link
                    href="/cart"
                  >
                    <a
                      aria-label="View your cart"
                      href="/cart"
                      onClick={[Function]}
                    >
                      View Your Bag
                      <span
                        style={
                          Object {
                            "marginLeft": "5px",
                            "marginRight": "5px",
                          }
                        }
                      >
                        (
                        )
                      </span>
                    </a>
                  </Link>
                  <Link
                    href=""
                  >
                    <a
                      aria-label="Go to checkout"
                      className="o-button o-button--negative o-button--lrg"
                      href=""
                      onClick={[Function]}
                    >
                      CHECKOUT
                    </a>
                  </Link>
                </div>
              </MiniBag>
            </Connect(MiniBag)>
          </span>
        </div>
        <Connect(NavBar)>
          <NavBar
            dispatch={[Function]}
            menu={
              Object {
                "data": Array [
                  Object {
                    "menu_items": Array [
                      Object {
                        "canonical_path": "/categories/1",
                        "id": 1,
                        "reference": "Bathroom",
                        "title": "Bathroom",
                      },
                    ],
                  },
                ],
                "error": false,
                "loading": false,
              }
            }
          >
            <div
              className="o-nav"
              role="navigation"
            >
              <NavBarOption
                as="/categories/1"
                href="/categories/1"
                index={0}
                key="0"
                title="Bathroom"
              >
                <Link
                  as="/categories/1"
                  href="/slug?slug=/categories/1"
                >
                  <a
                    className="o-nav__option o-nav__option--first"
                    href="/categories/1"
                    onClick={[Function]}
                  >
                    Bathroom
                  </a>
                </Link>
              </NavBarOption>
            </div>
          </NavBar>
        </Connect(NavBar)>
        <div
          className="o-body"
        >
          <h1>
            Unable to load product.
          </h1>
        </div>
        <div
          className="o-footer"
        >
          Footer
        </div>
      </div>
    </Layout>
  </Product>
</Provider>
`;

exports[`Processing state handling: displays loading message, when there is no error and product is loading from db 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getAction": [Function],
      "getActions": [Function],
      "getState": [Function],
      "isActionDispatched": [Function],
      "isActionTypeDispatched": [Function],
      "subscribe": [Function],
    }
  }
>
  <Product
    dispatch={[Function]}
    product={
      Object {
        "error": false,
        "loading": true,
        "product": Array [],
      }
    }
  >
    <Layout>
      <div>
        <CustomHead>
          <SideEffect(Head)>
            <Head />
          </SideEffect(Head)>
        </CustomHead>
        <div
          className="o-header"
        >
          <Logo
            className="o-header__logo"
          >
            <div
              className="o-header__logo"
            >
              <Link
                as="/"
                href="/home/index"
              >
                <a
                  href="/"
                  onClick={[Function]}
                >
                  <Image
                    height={79}
                    src="/static/logo.svg"
                    width={72}
                  >
                    <div
                      className={undefined}
                      style={
                        Object {
                          "height": 79,
                          "width": 72,
                        }
                      }
                    >
                      <img
                        className="c-image"
                        height={79}
                        src="/static/logo.svg"
                        width={72}
                      />
                    </div>
                  </Image>
                </a>
              </Link>
            </div>
          </Logo>
          <span
            className="o-header__search"
          >
            <SearchBar
              onChange={undefined}
              queryObject={undefined}
            >
              <form
                action="/search"
                method="get"
                onSubmit={[Function]}
                role="search"
              >
                <div
                  className="c-searchbar"
                >
                  <input
                    aria-label="search text"
                    className="c-searchbar--input"
                    name="query"
                    onChange={[Function]}
                    placeholder="Enter Keyword Or Product Code"
                    type="search"
                    value=""
                  />
                  <Button
                    label="Search"
                    size="lrg"
                    status="primary"
                  >
                    <button
                      className="o-button o-button--primary o-button--lrg"
                      disabled={false}
                      role="button"
                      tabIndex="0"
                    >
                      Search
                    </button>
                  </Button>
                </div>
              </form>
            </SearchBar>
          </span>
          <span
            className="o-header__minibag"
          >
            <Connect(MiniBag)>
              <MiniBag
                cart={Object {}}
                dispatch={[Function]}
              >
                <div>
                  <Link
                    href="/cart"
                  >
                    <a
                      aria-label="View your cart"
                      href="/cart"
                      onClick={[Function]}
                    >
                      View Your Bag
                      <span
                        style={
                          Object {
                            "marginLeft": "5px",
                            "marginRight": "5px",
                          }
                        }
                      >
                        (
                        )
                      </span>
                    </a>
                  </Link>
                  <Link
                    href=""
                  >
                    <a
                      aria-label="Go to checkout"
                      className="o-button o-button--negative o-button--lrg"
                      href=""
                      onClick={[Function]}
                    >
                      CHECKOUT
                    </a>
                  </Link>
                </div>
              </MiniBag>
            </Connect(MiniBag)>
          </span>
        </div>
        <Connect(NavBar)>
          <NavBar
            dispatch={[Function]}
            menu={
              Object {
                "data": Array [
                  Object {
                    "menu_items": Array [
                      Object {
                        "canonical_path": "/categories/1",
                        "id": 1,
                        "reference": "Bathroom",
                        "title": "Bathroom",
                      },
                    ],
                  },
                ],
                "error": false,
                "loading": false,
              }
            }
          >
            <div
              className="o-nav"
              role="navigation"
            >
              <NavBarOption
                as="/categories/1"
                href="/categories/1"
                index={0}
                key="0"
                title="Bathroom"
              >
                <Link
                  as="/categories/1"
                  href="/slug?slug=/categories/1"
                >
                  <a
                    className="o-nav__option o-nav__option--first"
                    href="/categories/1"
                    onClick={[Function]}
                  >
                    Bathroom
                  </a>
                </Link>
              </NavBarOption>
            </div>
          </NavBar>
        </Connect(NavBar)>
        <div
          className="o-body"
        >
          <h1>
            Loading product...
          </h1>
        </div>
        <div
          className="o-footer"
        >
          Footer
        </div>
      </div>
    </Layout>
  </Product>
</Provider>
`;

exports[`Processing state handling: displays relevant message, when product data is empty 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getAction": [Function],
      "getActions": [Function],
      "getState": [Function],
      "isActionDispatched": [Function],
      "isActionTypeDispatched": [Function],
      "subscribe": [Function],
    }
  }
>
  <Product
    dispatch={[Function]}
    product={Object {}}
  >
    <Layout>
      <div>
        <CustomHead>
          <SideEffect(Head)>
            <Head />
          </SideEffect(Head)>
        </CustomHead>
        <div
          className="o-header"
        >
          <Logo
            className="o-header__logo"
          >
            <div
              className="o-header__logo"
            >
              <Link
                as="/"
                href="/home/index"
              >
                <a
                  href="/"
                  onClick={[Function]}
                >
                  <Image
                    height={79}
                    src="/static/logo.svg"
                    width={72}
                  >
                    <div
                      className={undefined}
                      style={
                        Object {
                          "height": 79,
                          "width": 72,
                        }
                      }
                    >
                      <img
                        className="c-image"
                        height={79}
                        src="/static/logo.svg"
                        width={72}
                      />
                    </div>
                  </Image>
                </a>
              </Link>
            </div>
          </Logo>
          <span
            className="o-header__search"
          >
            <SearchBar
              onChange={undefined}
              queryObject={undefined}
            >
              <form
                action="/search"
                method="get"
                onSubmit={[Function]}
                role="search"
              >
                <div
                  className="c-searchbar"
                >
                  <input
                    aria-label="search text"
                    className="c-searchbar--input"
                    name="query"
                    onChange={[Function]}
                    placeholder="Enter Keyword Or Product Code"
                    type="search"
                    value=""
                  />
                  <Button
                    label="Search"
                    size="lrg"
                    status="primary"
                  >
                    <button
                      className="o-button o-button--primary o-button--lrg"
                      disabled={false}
                      role="button"
                      tabIndex="0"
                    >
                      Search
                    </button>
                  </Button>
                </div>
              </form>
            </SearchBar>
          </span>
          <span
            className="o-header__minibag"
          >
            <Connect(MiniBag)>
              <MiniBag
                cart={Object {}}
                dispatch={[Function]}
              >
                <div>
                  <Link
                    href="/cart"
                  >
                    <a
                      aria-label="View your cart"
                      href="/cart"
                      onClick={[Function]}
                    >
                      View Your Bag
                      <span
                        style={
                          Object {
                            "marginLeft": "5px",
                            "marginRight": "5px",
                          }
                        }
                      >
                        (
                        )
                      </span>
                    </a>
                  </Link>
                  <Link
                    href=""
                  >
                    <a
                      aria-label="Go to checkout"
                      className="o-button o-button--negative o-button--lrg"
                      href=""
                      onClick={[Function]}
                    >
                      CHECKOUT
                    </a>
                  </Link>
                </div>
              </MiniBag>
            </Connect(MiniBag)>
          </span>
        </div>
        <Connect(NavBar)>
          <NavBar
            dispatch={[Function]}
            menu={
              Object {
                "data": Array [
                  Object {
                    "menu_items": Array [
                      Object {
                        "canonical_path": "/categories/1",
                        "id": 1,
                        "reference": "Bathroom",
                        "title": "Bathroom",
                      },
                    ],
                  },
                ],
                "error": false,
                "loading": false,
              }
            }
          >
            <div
              className="o-nav"
              role="navigation"
            >
              <NavBarOption
                as="/categories/1"
                href="/categories/1"
                index={0}
                key="0"
                title="Bathroom"
              >
                <Link
                  as="/categories/1"
                  href="/slug?slug=/categories/1"
                >
                  <a
                    className="o-nav__option o-nav__option--first"
                    href="/categories/1"
                    onClick={[Function]}
                  >
                    Bathroom
                  </a>
                </Link>
              </NavBarOption>
            </div>
          </NavBar>
        </Connect(NavBar)>
        <div
          className="o-body"
        >
          <h1>
            Unable to load product.
          </h1>
        </div>
        <div
          className="o-footer"
        >
          Footer
        </div>
      </div>
    </Layout>
  </Product>
</Provider>
`;
